# GTestExample

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: CMakeLists.txt  ICalculator.h  calculator.cpp  calculator.h  main.cpp
src/calculator/: CMakeLists.txt  Calculator.cpp
src/lantern/: CMakeLists.txt  IBattery.h  ILantern.h  LanternBattery.cpp  LanternBattery.h  SmallLantern.cpp  SmallLantern.h  main.cpp
tests/: CMakeLists.txt  CalculatorTest.cpp  CalculatorUnitTest.cpp  calculator_unittest.cpp  main.cpp
tests/calculator/: CMakeLists.txt  CalculatorTest.cpp  CalculatorUnitTest.cpp
tests/lantern/: CMakeLists.txt  IBatteryMock.h  SmallLanternTest.cpp
